# lsquant-official

./: CMakeLists.txt  README  toolchain-gcc.cmake
examples/Aron_case/: README  params.txt  plot_conductivity.py
examples/Aron_original_code/: build  cleanup  fit_spin_lifetime.py  hamiltonian.f90  main.f90  modules.f90  operators_omp_KPM_Patch.f90  plot_cn.py  plot_conductivity.py  plot_xy.py  process_charge.f90  process_spin.f90  spin_precession.f90  spin_temperature.py  submit.script  unitcell.txt  unitcell_4atom.txt  utils.f90  wavepacket.f90
examples/Siesta_to_LSQuant/: README  plot_conductivity.py
examples/Siesta_to_LSQuant/operators/graphene_SZ/: #RUN.fdf#  BASIS_ENTHALPY  BASIS_HARRIS_ENTHALPY  C.ion  C.ion.nc  C.ion.xml  CLOCK  FORCE_STRESS  INPUT_TMP.18945  NON_TRIMMED_KP_LIST  OCCS  OUTVARS.yml  RUN.fdf  RUN.out  Rho.grid.nc  TIMES  TotalPotential.grid.nc  fort.12  graphene.DM  graphene.EIG  graphene.FA  graphene.HSX  graphene.KP  graphene.ORB_INDX  graphene.RHO  graphene.TSHS  graphene.VT  graphene.XV  graphene.alloc  graphene.times  out.fdf
include/: Kubo_solver_FFT.hpp  chebyshev_moments.hpp  chebyshev_moments_Device.hpp  chebyshev_moments_Graphene_NNN.hpp  chebyshev_solver.hpp  chebyshev_solver_Device.hpp  chebyshev_solver_Graphene_NNN.hpp  linear_algebra.hpp  quantum_states.hpp  sparse_matrix.hpp  sparse_matrix_kQuant.hpp  special_functions.hpp
src/: #sparse_matrix_kquant_nonOrth.cpp#  .#sparse_matrix_kquant_nonOrth.cpp  Bastin_FFTs.cpp  CMakeLists.txt  Graphene_NNN.hpp  Graphene_NNN_bak.hpp  Greenwood_FFTs.cpp  Kubo_solver_FFT.cpp  Kubo_solver_FFT_postProcess.cpp  chebyshev_moments.cpp  chebyshev_moments1D.cpp  chebyshev_moments1D_Graphene_NNN.cpp  chebyshev_momentsTD.cpp  chebyshev_momentsTD_Device.cpp  chebyshev_momentsTD_Graphene_NNN.cpp  chebyshev_moments_Device.cpp  chebyshev_moments_Graphene_NNN.cpp  chebyshev_solver.cpp  chebyshev_solver_Device.cpp  chebyshev_solver_Graphene_NNN.cpp  chebyshev_vectors.cpp  chebyshev_vectors_Device.cpp  chebyshev_vectors_Graphene_NNN.cpp  device-postProcess.cpp  device-postProcess_Graphene_NNN.cpp  eigen_linear_algebra.cpp  eigen_sparse_matrix.cpp  inline_compute-Kubo-kpm-FFT-nonOrth.cpp  inline_compute-Kubo-kpm-FFT.cpp  inline_compute-Kubo-kpm-FFT_kQuant.cpp  inline_compute-Kubo-kpm-FFT_kQuant_nonOrth.cpp  inline_compute-Kubo-kpm-FFT_kQuant_nonOrth_ChrisVel.cpp  inline_compute-kpm-MeanSquareDisplacement_DeviceSim.cpp  inline_compute-kpm-MeanSquareDisplacement_Graphene_NNN_2.cpp  inline_compute-kpm-TimeEvOp.cpp  inline_compute-kpm-TimeEvOp_Device.cpp  inline_compute-kpm-spacialresolution.cpp  inline_kpm-DOS-standalone.cpp  inline_kpm-DOS-standalone_Graphene_NNN.cpp  inline_kpm-DOS-standalone_kQuant.cpp  (+14 more)
src/Device/: Device.cpp  Device.hpp  Graphene_KaneMele.cpp  Graphene_KaneMele.hpp  Graphene_NNN.cpp
utilities/: CMakeLists.txt
utilities/siesta2sparse/: siesta2linqt.py  siesta2linqt_kQuant.py  siesta2linqt_kQuant_nonOrth.py  siesta2linqt_kQuant_test.py  siesta2linqt_noDis.py  siesta2linqt_realSpace.py  siesta2linqt_realspace.py
utilities/wannier2sparse2/: CMakeLists.txt
utilities/wannier2sparse2/src/: CMakeLists.txt  wannier_hr_to_csr.cpp  wannier_to_csr.cpp  wannier_velocity_to_csr.cpp
