# @author  Jose H. Garcia


#CREATES KPM_LIB
set(KPM_LIB_SOURCES
 "chebyshev_solver.cpp"
 "quantum_states.cpp"
 "chebyshev_vectors.cpp"
 "chebyshev_moments.cpp"
 "chebyshev_moments2D.cpp"
 "chebyshev_momentsAC.cpp"
 "chebyshev_moments1D.cpp"
 "chebyshev_momentsTD.cpp"
 "chebyshev_momentsLocal.cpp"
 "sparse_matrix.cpp"
 "special_functions.cpp"
 "Kubo_solver_FFT.cpp"
 "Kubo_solver_FFT_postProcess.cpp"
 "Greenwood_FFTs.cpp"
 "Bastin_FFTs.cpp"
 "Device/Device.cpp"
 "Device/Graphene_KaneMele.cpp"
 
 
 "chebyshev_solver_Device.cpp"
 "chebyshev_solver_Graphene_NNN.cpp"
 "chebyshev_vectors_Device.cpp"
 "chebyshev_moments_Graphene_NNN.cpp"
 "chebyshev_moments_Device.cpp"
 "chebyshev_moments1D_Graphene_NNN.cpp"
 "chebyshev_vectors_Graphene_NNN.cpp"
 "chebyshev_momentsTD_Device.cpp"
 "chebyshev_momentsTD_Graphene_NNN.cpp"
)
#IF EIGEN BACKEND IS USED
if( ${EIGEN} STREQUAL "TRUE" )
	set(KPM_LIB_SOURCES "${KPM_LIB_SOURCES}" "eigen_sparse_matrix.cpp" "eigen_linear_algebra.cpp" )
	message( ${KPM_LIB_SOURCES} )
endif()

#IF INTEL BACKEND IS USED
if( ${INTEL_MKL} STREQUAL "TRUE" )
	set(KPM_LIB_SOURCES "${KPM_LIB_SOURCES}" "eigen_sparse_matrix.cpp" "eigen_linear_algebra.cpp" )
	message( ${KPM_LIB_SOURCES} )
endif()

#CREATION OF THE LIBRARY
set( KPM_LIB kpm_lib)
add_library(${KPM_LIB} STATIC ${KPM_LIB_SOURCES})
target_link_libraries(${KPM_LIB} ${BLAS_LIB})


#Create the  different executables
set(MAIN inline_compute-kpm-nonEqOp)
add_executable(${MAIN} inline_compute-kpm-nonEqOp.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-CorrOp )
add_executable(${MAIN} inline_compute-kpm-CorrOp.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-spectralOp )
add_executable(${MAIN} inline_compute-kpm-spectralOp.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_kpm_S-inversion )
add_executable(${MAIN} inline_kpm-S-inversion.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_compute-kpm-GetDeltaPhi )
add_executable(${MAIN} inline_compute-kpm-GetDeltaPhi.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_compute-kpm-LocalDOS )
add_executable(${MAIN} inline_compute-kpm-LocalDOS.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_compute-kpm-spacialresolution )
add_executable(${MAIN} inline_compute-kpm-spacialresolution.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_spectralFunctionFromChebmom)
add_executable(${MAIN} spectralFunctionFromChebmom.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_localDensitiesFromChebmom)
add_executable(${MAIN} localDensitiesFromChebmom.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_kuboGreenwoodFromChebmom)
add_executable(${MAIN} kuboGreenwoodFromChebmom.cpp)
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_kuboBastinIFromChebmom)
add_executable(${MAIN} kuboBastinIFromChebmom.cpp)
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_kuboBastinIIFromChebmom)
add_executable(${MAIN} kuboBastinIIFromChebmom.cpp)
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_kuboBastinFromChebmom)
add_executable(${MAIN} kuboBastinFromChebmom.cpp)
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_kuboBastinSeaFromChebmom)
add_executable(${MAIN} kuboBastinSeaFromChebmom.cpp)
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_kuboBastinSurfFromChebmom)
add_executable(${MAIN} kuboBastinSurfFromChebmom.cpp)
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_timeCorrelationsFromChebmom )
add_executable(${MAIN} timeCorrelationsFromChebmom.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_compute-Kubo-kpm-FFT )
add_executable(${MAIN} inline_compute-Kubo-kpm-FFT.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_opticalConductivityFromChebmom )
add_executable(${MAIN} opticalConductivityFromChebmom.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_spectralFunctionFromChebmom_FFTgrid)
add_executable(${MAIN} spectralFunctionFromChebmom_FFTgrid.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-TimeEvProjetedOpWF )
add_executable(${MAIN} inline_compute-kpm-TimeEvProjetedOp-Projecting_WF.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_spectralFunctionFromChebmom_Lorentz)
add_executable(${MAIN} spectralFunctionFromChebmom_Lorentz.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_kuboGreenwoodFromChebmom_FFTgrid)
add_executable(${MAIN} kuboGreenwoodFromChebmom_FFTgrid.cpp)
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-MeanSquareDisplacement )
add_executable(${MAIN} inline_compute-kpm-MeanSquareDisplacement.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_compute-kpm-MeanSquareDisplacement_DeviceSim )
add_executable(${MAIN} inline_compute-kpm-MeanSquareDisplacement_DeviceSim.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-MeanSquareDisplacement_Graphene_NNN_2 )
add_executable(${MAIN} inline_compute-kpm-MeanSquareDisplacement_Graphene_NNN_2.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN inline_kuboBastinFromChebmom_FFTgrid)
add_executable(${MAIN} kuboBastinFromChebmom_FFTgrid.cpp)
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-TimeEvProjetedOp )
add_executable(${MAIN} inline_compute-kpm-TimeEvProjetedOp.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-spectralOp-nonOrth )
add_executable(${MAIN} inline_compute-kpm-spectralOp-nonOrth.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-TimeEvOp )
add_executable(${MAIN} inline_compute-kpm-TimeEvOp.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-TimeEvOp_Device )
add_executable(${MAIN} inline_compute-kpm-TimeEvOp_Device.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN kpm-nonOrth-precision-test )
add_executable(${MAIN} kpm-nonOrth-precision-test.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_kpm-DOS-standalone )
add_executable(${MAIN} inline_kpm-DOS-standalone.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_kpm-DOS-standalone_Graphene_NNN )
add_executable(${MAIN} inline_kpm-DOS-standalone_Graphene_NNN.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )


set(MAIN device-postProcess )
add_executable(${MAIN} device-postProcess.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )
 

set(MAIN device-postProcess_Graphene_NNN )
add_executable(${MAIN} device-postProcess_Graphene_NNN.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )
 

set(MAIN inline_compute-Kubo-kpm-FFT-nonOrth )
add_executable(${MAIN} inline_compute-Kubo-kpm-FFT-nonOrth.cpp )
target_link_libraries(${MAIN} ${KPM_LIB} )

set(MAIN inline_compute-kpm-TimeEvOpwithWF )
add_executable(${MAIN} inline_compute-kpm-TimeEvOpwithWF.cpp  )
target_link_libraries(${MAIN} ${KPM_LIB} )
